fix: tirando enviesamento no conjunto de dados

--- a/mortalidade-covid-classificacao.ipynb
+++ b/mortalidade-covid-classificacao.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "70845aa3",
+   "execution_count": 7,
+   "id": "dc6b40a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,16 @@
     "from sklearn.metrics import (accuracy_score, precision_score, recall_score, \n",
     "                             f1_score, cohen_kappa_score)\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b98929fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ==================== CONFIGURAÇÕES ====================\n",
     "ARQUIVO_TRAIN = 'cvd/train.csv'\n",
     "RANDOM_STATE = 42\n",
@@ -25,11 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e771d206",
+   "execution_count": 9,
+   "id": "77bda8b0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ==================== FUNÇÕES AUXILIARES ====================\n",
+    "\n",
     "def calcular_metricas(y_true, y_pred):\n",
     "    \"\"\"Calcula todas as métricas de avaliação\"\"\"\n",
     "    return {\n",
@@ -38,16 +48,8 @@
     "        'Recall': recall_score(y_true, y_pred, zero_division=0),\n",
     "        'F1-Score': f1_score(y_true, y_pred, zero_division=0),\n",
     "        'Kappa': cohen_kappa_score(y_true, y_pred)\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1c14ddc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    }\n",
+    "\n",
     "def imprimir_resultados(nome_metodo, metricas_lista):\n",
     "    \"\"\"Imprime resultados formatados com média e desvio padrão\"\"\"\n",
     "    print(f\"\\n{'='*60}\")\n",
@@ -65,38 +67,8 @@
     "        std = df_metricas[metrica].std()\n",
     "        print(f\"{metrica:<15} {media:.4f}       {std:.4f}\")\n",
     "    \n",
-    "    print(f\"\\nNúmero de execuções: {len(metricas_lista)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5cde4b17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def encontrar_melhor_k(X_train, y_train, X_val, y_val, k_range=range(1, 31)):\n",
-    "    \"\"\"Encontra o melhor valor de K usando conjunto de validação\"\"\"\n",
-    "    melhores_scores = []\n",
-    "    \n",
-    "    for k in k_range:\n",
-    "        knn = KNeighborsClassifier(n_neighbors=k)\n",
-    "        knn.fit(X_train, y_train)\n",
-    "        y_pred = knn.predict(X_val)\n",
-    "        score = f1_score(y_val, y_pred, zero_division=0)\n",
-    "        melhores_scores.append((k, score))\n",
-    "    \n",
-    "    melhor_k = max(melhores_scores, key=lambda x: x[1])[0]\n",
-    "    return melhor_k"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "12faae91",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(f\"\\nNúmero de execuções: {len(metricas_lista)}\")\n",
+    "\n",
     "def preprocessar_dados(df):\n",
     "    \"\"\"Preprocessa o dataset: trata datas, valores ausentes e codifica variáveis\"\"\"\n",
     "    df_proc = df.copy()\n",
@@ -145,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "85935007",
+   "execution_count": 10,
+   "id": "81ffaac0",
    "metadata": {},
    "outputs": [
     {
@@ -170,15 +142,12 @@
       "  Features utilizadas: ['country', 'gender', 'age', 'vis_wuhan', 'from_wuhan', 'symptom1', 'symptom2', 'symptom3', 'symptom4', 'symptom5', 'symptom6']\n",
       "\n",
       "============================================================\n",
-      "ETAPA 1: ENCONTRANDO MELHOR VALOR DE K (usando validação)\n",
+      "DIVISÃO DOS DADOS: TRAIN/TEST (70/30)\n",
       "============================================================\n",
       "\n",
       "Tamanho dos conjuntos:\n",
-      "  - Treino: 154 amostras (69.4%)\n",
-      "  - Validação: 23 amostras (10.4%)\n",
-      "  - Teste: 45 amostras (20.3%)\n",
-      "\n",
-      ">>> MELHOR VALOR DE K ENCONTRADO: 2\n",
+      "  - Treino: 155 amostras (69.8%)\n",
+      "  - Teste: 67 amostras (30.2%)\n",
       "\n",
       "\n",
       "============================================================\n",
@@ -191,11 +160,11 @@
       "\n",
       "Métrica         Média        Desvio Padrão  \n",
       "------------------------------------------\n",
-      "Acurácia        0.8866       0.0334\n",
-      "Precisão        0.9103       0.0704\n",
-      "Recall          0.6702       0.1114\n",
-      "F1-Score        0.7657       0.0826\n",
-      "Kappa           0.6943       0.0990\n",
+      "Acurácia        0.8806       0.0328\n",
+      "Precisão        0.8396       0.0666\n",
+      "Recall          0.7193       0.1000\n",
+      "F1-Score        0.7711       0.0692\n",
+      "Kappa           0.6914       0.0894\n",
       "\n",
       "Número de execuções: 30\n",
       "\n",
@@ -215,11 +184,11 @@
       "\n",
       "Métrica         Média        Desvio Padrão  \n",
       "------------------------------------------\n",
-      "Acurácia        0.9097       0.0392\n",
-      "Precisão        0.9271       0.0774\n",
-      "Recall          0.7496       0.0957\n",
-      "F1-Score        0.8261       0.0734\n",
-      "Kappa           0.7654       0.0973\n",
+      "Acurácia        0.9007       0.0520\n",
+      "Precisão        0.8738       0.0893\n",
+      "Recall          0.7598       0.1741\n",
+      "F1-Score        0.8057       0.1150\n",
+      "Kappa           0.7391       0.1453\n",
       "\n",
       "Número de execuções: 5\n",
       "\n",
@@ -239,11 +208,11 @@
       "\n",
       "Métrica         Valor        Desvio Padrão  \n",
       "------------------------------------------\n",
-      "Acurácia        0.9054       0.0000\n",
-      "Precisão        0.9200       0.0000\n",
-      "Recall          0.7302       0.0000\n",
-      "F1-Score        0.8142       0.0000\n",
-      "Kappa           0.7518       0.0000\n",
+      "Acurácia        0.9009       0.0000\n",
+      "Precisão        0.8475       0.0000\n",
+      "Recall          0.7937       0.0000\n",
+      "F1-Score        0.8197       0.0000\n",
+      "Kappa           0.7515       0.0000\n",
       "\n",
       "Número de execuções: 222 (uma por amostra)\n",
       "\n",
@@ -252,19 +221,19 @@
       "RESUMO COMPARATIVO DOS MÉTODOS\n",
       "############################################################\n",
       "\n",
-      "Valor de K utilizado: 2\n",
+      "Valor de K utilizado: 5 (padrão)\n",
       "Dataset: 222 amostras, 11 features\n",
       "\n",
       "Método           Acurácia(μ±σ)    F1-Score(μ±σ)    Precisão(μ±σ)\n",
       "----------------------------------------------------------------------\n",
-      "Hold-Out         0.8866±0.0334   0.7657±0.0826   0.9103±0.0704\n",
-      "K-Fold (5)       0.9097±0.0392   0.8261±0.0734   0.9271±0.0774\n",
-      "Leave-One-Out    0.9054±0.0000   0.8142±0.0000   0.9200±0.0000\n",
+      "Hold-Out         0.8806±0.0328   0.7711±0.0692   0.8396±0.0666\n",
+      "K-Fold (5)       0.9007±0.0520   0.8057±0.1150   0.8738±0.0893\n",
+      "Leave-One-Out    0.9009±0.0000   0.8197±0.0000   0.8475±0.0000\n",
       "\n",
       "Métrica         Hold-Out     K-Fold       LOO         \n",
       "-------------------------------------------------------\n",
-      "Recall          0.6702±0.1114   0.7496±0.0957   0.7302±0.0000\n",
-      "Kappa           0.6943±0.0990   0.7654±0.0973   0.7518±0.0000\n",
+      "Recall          0.7193±0.1000   0.7598±0.1741   0.7937±0.0000\n",
+      "Kappa           0.6914±0.0894   0.7391±0.1453   0.7515±0.0000\n",
       "\n",
       "############################################################\n",
       "ANÁLISE CONCLUÍDA\n",
@@ -273,6 +242,8 @@
     }
    ],
    "source": [
+    "# ==================== CARREGAR E PREPARAR DADOS ====================\n",
+    "\n",
     "print(\"=\"*60)\n",
     "print(\"CLASSIFICAÇÃO KNN - COVID-19 DATASET\")\n",
     "print(\"=\"*60)\n",
@@ -326,34 +297,24 @@
     "    print(\"\\nERRO: Dataset muito pequeno para análise!\")\n",
     "    exit()\n",
     "\n",
+    "# ==================== DIVISÃO TRAIN/TEST (70/30) ====================\n",
+    "\n",
     "print(f\"\\n{'='*60}\")\n",
-    "print(\"ETAPA 1: ENCONTRANDO MELHOR VALOR DE K (usando validação)\")\n",
+    "print(\"DIVISÃO DOS DADOS: TRAIN/TEST (70/30)\")\n",
     "print(f\"{'='*60}\")\n",
     "\n",
-    "# Dividir em treino+validação (80%) e teste (20%)\n",
-    "X_temp, X_test, y_temp, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=RANDOM_STATE, stratify=y\n",
-    ")\n",
-    "\n",
-    "# Dividir treino+validação em treino (70% do total) e validação (10% do total)\n",
-    "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    X_temp, y_temp, test_size=0.125, random_state=RANDOM_STATE, stratify=y_temp\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=RANDOM_STATE, stratify=y\n",
     ")\n",
     "\n",
     "print(f\"\\nTamanho dos conjuntos:\")\n",
     "print(f\"  - Treino: {len(X_train)} amostras ({len(X_train)/len(X)*100:.1f}%)\")\n",
-    "print(f\"  - Validação: {len(X_val)} amostras ({len(X_val)/len(X)*100:.1f}%)\")\n",
     "print(f\"  - Teste: {len(X_test)} amostras ({len(X_test)/len(X)*100:.1f}%)\")\n",
     "\n",
     "# Normalizar dados\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_val_scaled = scaler.transform(X_val)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "# Encontrar melhor K\n",
-    "melhor_k = encontrar_melhor_k(X_train_scaled, y_train, X_val_scaled, y_val)\n",
-    "print(f\"\\n>>> MELHOR VALOR DE K ENCONTRADO: {melhor_k}\")\n",
     "\n",
     "# ==================== MÉTODO 1: HOLD-OUT (70/30) ====================\n",
     "\n",
@@ -374,8 +335,8 @@
     "    X_train_ho_scaled = scaler_ho.fit_transform(X_train_ho)\n",
     "    X_test_ho_scaled = scaler_ho.transform(X_test_ho)\n",
     "    \n",
-    "    # Treinar KNN\n",
-    "    knn = KNeighborsClassifier(n_neighbors=melhor_k)\n",
+    "    # Treinar KNN com valor padrão (k=5)\n",
+    "    knn = KNeighborsClassifier()\n",
     "    knn.fit(X_train_ho_scaled, y_train_ho)\n",
     "    y_pred = knn.predict(X_test_ho_scaled)\n",
     "    \n",
@@ -405,8 +366,8 @@
     "    y_train_kf = y.iloc[train_idx]\n",
     "    y_test_kf = y.iloc[test_idx]\n",
     "    \n",
-    "    # Treinar KNN\n",
-    "    knn = KNeighborsClassifier(n_neighbors=melhor_k)\n",
+    "    # Treinar KNN com valor padrão (k=5)\n",
+    "    knn = KNeighborsClassifier()\n",
     "    knn.fit(X_train_kf, y_train_kf)\n",
     "    y_pred = knn.predict(X_test_kf)\n",
     "    \n",
@@ -441,8 +402,8 @@
     "    y_train_loo = y.iloc[train_idx]\n",
     "    y_test_loo = y.iloc[test_idx]\n",
     "    \n",
-    "    # Treinar KNN\n",
-    "    knn = KNeighborsClassifier(n_neighbors=melhor_k)\n",
+    "    # Treinar KNN com valor padrão (k=5)\n",
+    "    knn = KNeighborsClassifier()\n",
     "    knn.fit(X_train_loo, y_train_loo)\n",
     "    y_pred = knn.predict(X_test_loo)\n",
     "    \n",
@@ -476,7 +437,7 @@
     "print(\"RESUMO COMPARATIVO DOS MÉTODOS\")\n",
     "print(f\"{'#'*60}\")\n",
     "\n",
-    "print(f\"\\nValor de K utilizado: {melhor_k}\")\n",
+    "print(f\"\\nValor de K utilizado: 5 (padrão)\")\n",
     "print(f\"Dataset: {len(X)} amostras, {X.shape[1]} features\")\n",
     "print(f\"\\nMétodo           Acurácia(μ±σ)    F1-Score(μ±σ)    Precisão(μ±σ)\")\n",
     "print(f\"{'-'*70}\")\n",
