fix: Corrigindo a ausencia do stratified k-fold

--- a/mortalidade-covid-classificacao.ipynb
+++ b/mortalidade-covid-classificacao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "dc6b40a7",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "b98929fb",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "77bda8b0",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "81ffaac0",
    "metadata": {},
    "outputs": [
@@ -234,6 +234,57 @@
       "-------------------------------------------------------\n",
       "Recall          0.7193±0.1000   0.7598±0.1741   0.7937±0.0000\n",
       "Kappa           0.6914±0.0894   0.7391±0.1453   0.7515±0.0000\n",
+      "\n",
+      "\n",
+      "============================================================\n",
+      "MÉTODO 2: K-FOLD CROSS-VALIDATION (K=5)\n",
+      "============================================================\n",
+      "Fold 1/5 concluído\n",
+      "Fold 2/5 concluído\n",
+      "Fold 3/5 concluído\n",
+      "Fold 4/5 concluído\n",
+      "Fold 5/5 concluído\n",
+      "\n",
+      "============================================================\n",
+      "RESULTADOS: K-Fold (K=5)\n",
+      "============================================================\n",
+      "\n",
+      "Métrica         Média        Desvio Padrão  \n",
+      "------------------------------------------\n",
+      "Acurácia        0.9007       0.0520\n",
+      "Precisão        0.8738       0.0893\n",
+      "Recall          0.7598       0.1741\n",
+      "F1-Score        0.8057       0.1150\n",
+      "Kappa           0.7391       0.1453\n",
+      "\n",
+      "Número de execuções: 5\n",
+      "\n",
+      "\n",
+      "============================================================\n",
+      "MÉTODO 3: STRATIFIED K-FOLD CROSS-VALIDATION (K=5)\n",
+      "============================================================\n",
+      "Estratificação - proporção de classes mantida em cada fold:\n",
+      "  Dataset completo: Classe 0 = 159 (71.6%), Classe 1 = 63 (28.4%)\n",
+      "\n",
+      "Fold 1/5: Treino -> Classe 0 = 127 (71.8%), Classe 1 = 50 (28.2%)\n",
+      "Fold 2/5: Treino -> Classe 0 = 127 (71.8%), Classe 1 = 50 (28.2%)\n",
+      "Fold 3/5: Treino -> Classe 0 = 128 (71.9%), Classe 1 = 50 (28.1%)\n",
+      "Fold 4/5: Treino -> Classe 0 = 127 (71.3%), Classe 1 = 51 (28.7%)\n",
+      "Fold 5/5: Treino -> Classe 0 = 127 (71.3%), Classe 1 = 51 (28.7%)\n",
+      "\n",
+      "============================================================\n",
+      "RESULTADOS: Stratified K-Fold (K=5)\n",
+      "============================================================\n",
+      "\n",
+      "Métrica         Média        Desvio Padrão  \n",
+      "------------------------------------------\n",
+      "Acurácia        0.8877       0.0649\n",
+      "Precisão        0.8821       0.1711\n",
+      "Recall          0.7449       0.1605\n",
+      "F1-Score        0.7892       0.1166\n",
+      "Kappa           0.7146       0.1563\n",
+      "\n",
+      "Número de execuções: 5\n",
       "\n",
       "############################################################\n",
       "ANÁLISE CONCLUÍDA\n",
@@ -467,6 +518,80 @@
     "print(f\"{'Kappa':<15} {df_ho['Kappa'].mean():.4f}±{df_ho['Kappa'].std():.4f}   \"\n",
     "      f\"{df_kf['Kappa'].mean():.4f}±{df_kf['Kappa'].std():.4f}   \"\n",
     "      f\"{metricas_loo_global['Kappa']:.4f}±0.0000\")\n",
+    "\n",
+    "\n",
+    "# ==================== MÉTODO 2: K-FOLD (K=5) ====================\n",
+    "\n",
+    "print(f\"\\n\\n{'='*60}\")\n",
+    "print(\"MÉTODO 2: K-FOLD CROSS-VALIDATION (K=5)\")\n",
+    "print(f\"{'='*60}\")\n",
+    "\n",
+    "kfold = KFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
+    "metricas_kfold = []\n",
+    "\n",
+    "# Normalizar todo o dataset\n",
+    "scaler_full = StandardScaler()\n",
+    "X_scaled_full = scaler_full.fit_transform(X)\n",
+    "\n",
+    "fold_num = 1\n",
+    "for train_idx, test_idx in kfold.split(X_scaled_full, y):\n",
+    "    X_train_kf = X_scaled_full[train_idx]\n",
+    "    X_test_kf = X_scaled_full[test_idx]\n",
+    "    y_train_kf = y.iloc[train_idx]\n",
+    "    y_test_kf = y.iloc[test_idx]\n",
+    "    \n",
+    "    # Treinar KNN com valor padrão (k=5)\n",
+    "    knn = KNeighborsClassifier()\n",
+    "    knn.fit(X_train_kf, y_train_kf)\n",
+    "    y_pred = knn.predict(X_test_kf)\n",
+    "    \n",
+    "    # Calcular métricas\n",
+    "    metricas = calcular_metricas(y_test_kf, y_pred)\n",
+    "    metricas_kfold.append(metricas)\n",
+    "    \n",
+    "    print(f\"Fold {fold_num}/5 concluído\")\n",
+    "    fold_num += 1\n",
+    "\n",
+    "imprimir_resultados(\"K-Fold (K=5)\", metricas_kfold)\n",
+    "\n",
+    "# ==================== MÉTODO 3: STRATIFIED K-FOLD (K=5) ====================\n",
+    "\n",
+    "print(f\"\\n\\n{'='*60}\")\n",
+    "print(\"MÉTODO 3: STRATIFIED K-FOLD CROSS-VALIDATION (K=5)\")\n",
+    "print(f\"{'='*60}\")\n",
+    "\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
+    "skfold = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
+    "metricas_skfold = []\n",
+    "\n",
+    "print(\"Estratificação - proporção de classes mantida em cada fold:\")\n",
+    "print(f\"  Dataset completo: Classe 0 = {(y==0).sum()} ({(y==0).sum()/len(y)*100:.1f}%), \"\n",
+    "      f\"Classe 1 = {(y==1).sum()} ({(y==1).sum()/len(y)*100:.1f}%)\\n\")\n",
+    "\n",
+    "fold_num = 1\n",
+    "for train_idx, test_idx in skfold.split(X_scaled_full, y):\n",
+    "    X_train_skf = X_scaled_full[train_idx]\n",
+    "    X_test_skf = X_scaled_full[test_idx]\n",
+    "    y_train_skf = y.iloc[train_idx]\n",
+    "    y_test_skf = y.iloc[test_idx]\n",
+    "    \n",
+    "    # Mostrar distribuição das classes em cada fold\n",
+    "    print(f\"Fold {fold_num}/5: Treino -> Classe 0 = {(y_train_skf==0).sum()} ({(y_train_skf==0).sum()/len(y_train_skf)*100:.1f}%), \"\n",
+    "          f\"Classe 1 = {(y_train_skf==1).sum()} ({(y_train_skf==1).sum()/len(y_train_skf)*100:.1f}%)\")\n",
+    "    \n",
+    "    # Treinar KNN com valor padrão (k=5)\n",
+    "    knn = KNeighborsClassifier()\n",
+    "    knn.fit(X_train_skf, y_train_skf)\n",
+    "    y_pred = knn.predict(X_test_skf)\n",
+    "    \n",
+    "    # Calcular métricas\n",
+    "    metricas = calcular_metricas(y_test_skf, y_pred)\n",
+    "    metricas_skfold.append(metricas)\n",
+    "    \n",
+    "    fold_num += 1\n",
+    "\n",
+    "imprimir_resultados(\"Stratified K-Fold (K=5)\", metricas_skfold)\n",
     "\n",
     "print(f\"\\n{'#'*60}\")\n",
     "print(\"ANÁLISE CONCLUÍDA\")\n",
