--- a/mortalidade-covid-classificacao.ipynb
+++ b/mortalidade-covid-classificacao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "dc6b40a7",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,12 @@
     "from sklearn.metrics import (accuracy_score, precision_score, recall_score, \n",
     "                             f1_score, cohen_kappa_score)\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "b98929fb",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "77bda8b0",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
     "    df_proc = df.copy()\n",
     "    \n",
     "    # Remover colunas não necessárias\n",
-    "    colunas_remover = ['id', 'location', 'sym_on', 'hosp_vis']\n",
+    "    colunas_remover = ['id', 'location', 'sym_on', 'hosp_vis', 'recov']\n",
     "    df_proc = df_proc.drop(columns=[col for col in colunas_remover if col in df_proc.columns])\n",
     "    \n",
     "    # Codificar variáveis categóricas\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "81ffaac0",
    "metadata": {},
    "outputs": [
